# bg-app

./: Cargo.toml  README.md
prisma/: schema.prisma
prisma-cli/: Cargo.toml
prisma/migrations/20240907112809_init/: migration.sql
prisma/migrations/20240916035054_init/: migration.sql
src/: auction.rs  lib.rs  main.rs  models.rs  prisma.rs  repository.rs  request.rs  services.rs
src/dtos/: message.rs
src/models/: auction.rs  auction_aggregate.rs  auction_item.rs  bid.rs  price.rs  user.rs
src/repository/: auction.rs  message.rs
src/services/: auction_manager.rs  messaging.rs
