[package]
name = "bgapp"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
chrono = "0.4.38"
futures-util = "0.3.30"
http = "1.1.0"
rand = "0.8.5"
serde = "1.0.208"
tokio = { version = "1", features = ["full"] }
tokio-websockets = { version = "0.10.0", features = ["client", "server", "sha1_smol", "rand"] }
tracing = "0.1"
tracing-subscriber = "0.3"
