[workspace]

members = [
  "prisma-cli",
]

[package]
name = "bgapp"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
chrono = "0.4.38"
futures-channel = "0.3.30"
futures-util = "0.3.30"
http = "1.1.0"
prisma-client-rust = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.11", default-features = false, features = ["postgresql"] }
rand = "0.8.5"
rustfmt = "0.10.0"
serde = { version = "1.0.208", features = ["derive"] }
serde_json = "1.0.128"
tokio = { version = "1", features = ["full"] }
tokio-postgres = "0.7.11"
tokio-stream = { version = "0.1.16", features = ["sync"] }
tokio-tungstenite = "0.23.1"
tracing = "0.1"
tracing-subscriber = "0.3"
